# 2022

./: .gitignore  AutoUpload.bat  README.md
Semester_5/Class/USP/assignment2/: CMakeLists.txt  a2q1.c  a2q10.c  a2q11.c  a2q12.c  a2q13.c  a2q14.c  a2q15.c  a2q16.c  a2q18.c  a2q19.c  a2q2.c  a2q20.c  a2q21.c  a2q22.c  a2q23.c  a2q24.c  a2q25.c  a2q26.c  a2q27.c  a2q28.c  a2q29.c  a2q3.c  a2q30.c  a2q31.c  a2q32.c  a2q33.c  a2q34.c  a2q4.c  a2q5.c  a2q6.c  a2q7.c  a2q8.c  a2q9.c  tempCodeRunnerFile.c  testing.c  testing2.c
Semester_6/: readme.txt
Semester_6/CNS/: mid term sylabus.docx
Semester_6/ID/: All in One.txt  bank.java  lesson plan.lnk
Semester_6/PLC/: PLC_1941012425_Assignment01.docx  Video.lnk
Semester_6/UNP/: UNP Assignment 3.docx  cheat.txt  client.c  poll.txt  poll1.txt  server.c  socket.txt  tcpClient.c  tcpechoClientServer.txt  test.ipynb
Semester_7/CC/: 11 nov 2022 Lesson Plan (CC)(CSE4085).docx  12.docx  Chapter6.pptx  Introduction-1.pptx  cc_question.txt  cc_question2.txt
Semester_7/DS/: Assignment_1 Solution.docx  Assignment_1_PS.docx  Distributed_PS (2).docx  Distributed_PS.docx  Presenetation_topics.xls  mosix_cluster_program_help_document.txt  ~$signment_1_PS.docx
Semester_7/IR/: ir que.txt  ps1.ipynb
Semester_7/IoT/: MidTerm - Project-Report Sample template(IOTPP) (1).docx  photoResistor.py  servoJump.py
Semester_7/UHV/: Assignment 2 UHV.docx
Virtusa/practiceandreferencefortheonlinetestvirtusa/: 1.java  10.java  11.java  12.java  14.java  15.java  16.java  18.java  19.java  2.java  21.java  23.java  25.java  27.java  28.java  (+25 more)
(+746 files in other folders)
