cmake_minimum_required(VERSION 3.20)
project(assignment2 C)

set(CMAKE_C_STANDARD 11)

add_executable(assignment2
        a2q1.c
        a2q10.c
        a2q11.c
        a2q12.c
        a2q13.c
        a2q14.c
        a2q15.c
        a2q16.c
        a2q18.c
        a2q19.c
        a2q2.c
        a2q20.c
        a2q21.c
        a2q22.c
        a2q23.c
        a2q24.c
        a2q25.c
        a2q26.c
        a2q3.c
        a2q4.c
        a2q5.c
        a2q6.c
        a2q7.c
        a2q8.c
        a2q9.c
        tempCodeRunnerFile.c)
